Fix letter spacing

--- a/assets/css/_override.scss
+++ b/assets/css/_override.scss
@@ -119,3 +119,7 @@ iframe[src*="https://www.youtube.com/embed/"] {
     padding-top: 2.3rem!important;
     padding-bottom: 2rem!important;
 }
+
+.home .home-profile .home-title {
+    letter-spacing: 6px!important;
+}
